# quickjs-universal

./: .gitignore  CMakeLists.txt  DevClean.ps1  DevPatch.ps1  DevRestore.ps1  MkPatch.ps1  Patch.ps1
.github/workflows/: patch.yml
PatchedSources/: Polyfill.h  cutils.h  quickjs-libc.c  quickjs.c  quickjs.c.rej  quickjs.h
Patches/: Polyfill.h  quickjs-patches.patch
